--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <h1>discover some functions</h1>
+   <h1>Tester les conditions</h1>
   <script src="script2.js"></script>
 </body>
+
 </html>
