--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,9 @@
 <body>
   <h1>discover some functions</h1>
    <h1>Tester les conditions</h1>
+  <h1>exemple de oucles</h1>
   <script src="script2.js"></script>
 </body>
 
 </html>
+
